# editingpdf

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/api-gateway/: .dockerignore  Dockerfile  Makefile  go.mod  main.go
apps/pdf-engine/: .dockerignore  Cargo.toml  Dockerfile  Makefile
apps/pdf-engine/src/: main.rs
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: canvas.tsx  editor.tsx  legal.tsx  logo.tsx  sidebar.tsx  thumbnails.tsx  toolbar.tsx
apps/web/src/lib/: export.ts  import-pdf.ts  render.ts
apps/web/src/store/: editor.ts
deploy/: .env.prod.example  docker-compose.data.yml  docker-compose.prod.yml  docker-compose.tls.yml  install.sh  openpdf
