[package]
name = "pdf-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
# Thin LTO keeps virtually all the runtime performance of full LTO while
# using far less memory and time to build — important on a low-RAM VPS.
lto = "thin"
